@@ -66,6 +66,11 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
   <font size="2">
   <li>
 	<font color=red>*new*</font>
+	[06/2024]
+	One paper (Speaker Identification) is accepted to <a href="https://interspeech2024.org/">INTERSPEECH 2024</a>.
+  </li>
+  <li>
+	<font color=red>*new*</font>
 	[05/2024]
 	One paper (Assessing News Thumbnail Representativeness) is accepted to <a href="https://2024.aclweb.org/">ACL 2024 Findings</a>.
   </li>
@@ -208,6 +213,12 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
 	</li>
   <h4><strong>[2024]</strong></h4>
 	<li>
+		<strong>Identifying Speakers in Dialogue Transcripts: A Text-based Approach Using Pretrained Language Models</strong>
+		<br><i>Van Minh Nguyen, Franck Dernoncourt, <u>Seunghyun Yoon</u>, Hanieh Deilamsalehy, Hao Tan, Ryan Rossi, Quan Hung Tran, Trung Bui, Thien Nguyen</i>
+		<br><a href="https://interspeech2024.org/">INTERSPEECH 2024</a>
+		<p>
+	</li>
+	<li>
 		<strong>Understanding News Thumbnail Representativeness by Counterfactual Text-Guided Contrastive Language-Image Pretraining</strong>
 		<a href="https://arxiv.org/pdf/2402.11159.pdf">[pdf]</a>
 		<br><i>Yejun Yoon, <u>Seunghyun Yoon</u>, Kunwoo Park</i>
@@ -283,7 +294,7 @@ I have published studies at NLP, AI, or signal processing conferences, such as <
 		<strong>Boosting Punctuation Restoration with Data Generation and Reinforcement Learning</strong>
 		<a href="https://www.isca-speech.org/archive/pdfs/interspeech_2023/lai23c_interspeech.pdf">[pdf]</a>
 		<br><i>Viet Lai, Abel Salinas, Hao Tan, Trung Bui, Quan Tran, <u>Seunghyun Yoon</u>, Hanieh Deilamsalehy, Franck Dernoncourt, Thien Nguyen</i>
-		<br><a href="https://www.interspeech2023.org/">Interspeech 2023</a>
+		<br><a href="https://www.interspeech2023.org/">INTERSPEECH 2023</a>
 		<p>
 	</li>
 	<li>
