@@ -1,6 +1,7 @@
 ﻿year,title,authors,conference,conference_url,comment,meta_1,meta_1-url,meta_2,meta_2-url,meta_3,meta_3-url,meta_4,meta_4-url
 arXiv,"PDFTriage: Question Answering over Long, Structured Documents","Jon Saad-Falcon, Joe Barrow, Alexa Siu, Ani Nenkova, Seunghyun Yoon, Ryan A. Rossi, Franck Dernoncourt",0,0,0,pdf,https://arxiv.org/pdf/2309.08872.pdf,0,0,0,0,0,0
 arXiv,MVMR: Evaluating Natural Language Video Localization Bias over Multiple Reliable Videos Pool,"Nakyeong Yang, Minsung Kim, Seunghyun Yoon, Joongbo Shin, Kyomin Jung",0,0,0,pdf,https://arxiv.org/pdf/2309.16701.pdf,0,0,0,0,0,0
+2024,Identifying Speakers in Dialogue Transcripts: A Text-based Approach Using Pretrained Language Models,"Van Minh Nguyen, Franck Dernoncourt, Seunghyun Yoon, Hanieh Deilamsalehy, Hao Tan, Ryan Rossi, Quan Hung Tran, Trung Bui, Thien Nguyen",INTERSPEECH 2024,https://interspeech2024.org/,0,0,0,0,0,0,0,0,0
 2024,Understanding News Thumbnail Representativeness by Counterfactual Text-Guided Contrastive Language-Image Pretraining,"Yejun Yoon, Seunghyun Yoon, Kunwoo Park",ACL 2024 Findings,https://2024.aclweb.org/,0,pdf,https://arxiv.org/pdf/2402.11159.pdf,0,0,0,0,0,0
 2024,Multilingual Sentence-Level Semantic Search using Meta-Distillation Learning,"Meryem M'hamdi, Jonathan May, Franck Dernoncourt, Trung Bui, Seunghyun Yoon",SIGIR 2024,https://sigir-2024.github.io/,0,pdf,https://arxiv.org/pdf/2309.08185.pdf,0,0,0,0,0,0
 2024,PEEB: Part-based Bird Classifiers with an Explainable and Editable Language Bottleneck,"Thang M. Pham, Peijie Chen, Tin Nguyen, Seunghyun Yoon, Trung Bui, Anh Nguyen",NAACL 2024 Findings,https://2024.naacl.org/,0,pdf,https://arxiv.org/pdf/2403.05297.pdf,0,0,0,0,0,0
@@ -11,7 +12,7 @@ arXiv,MVMR: Evaluating Natural Language Video Localization Bias over Multiple Re
 2023,Aspect-based Meeting Transcript Summarization: A Two-Stage Approach with Weak Supervision on Sentence Classification,"Zhongfen Deng, Seunghyun Yoon, Trung Bui, Franck Dernoncourt, Quan Tran, Shuaiqi Liu, Wenting Zhao, Tao Zhang, Yibo Wang, Philip Yu",IEEE BigData 2023,https://bigdataieee.org/BigData2023/,0,pdf,https://arxiv.org/pdf/2311.04292.pdf,0,0,0,0,0,0
 2023,Perturbation Robust Metric for Multi-Lingual Image Captioning,"Yongil Kim, Yerin Hwang, Hyeongu Yun, Seunghyun Yoon, Trung Bui, Kyomin Jung",EMNLP 2023 Findings,https://2023.emnlp.org/,0,pdf,https://aclanthology.org/2023.findings-emnlp.819.pdf,0,0,0,0,0,0
 2023,Moment Detection in Long Tutorial Videos,"Ioana Croitoru, Simion-Vlad Bogolin, Samuel Albanie, Yang Liu, Zhaowen Wang, Seunghyun Yoon, Franck Dernoncourt, Hailin Jin, Trung Bui",ICCV 2023,https://iccv2023.thecvf.com/,0,pdf,https://openaccess.thecvf.com/content/ICCV2023/papers/Croitoru_Moment_Detection_in_Long_Tutorial_Videos_ICCV_2023_paper.pdf,code,https://github.com/ioanacroi/longmoment-detr,0,0,0,0
-2023,Boosting Punctuation Restoration with Data Generation and Reinforcement Learning,"Viet Lai, Abel Salinas, Hao Tan, Trung Bui, Quan Tran, Seunghyun Yoon, Hanieh Deilamsalehy, Franck Dernoncourt, Thien Nguyen",Interspeech 2023,https://www.interspeech2023.org/,0,pdf,https://www.isca-speech.org/archive/pdfs/interspeech_2023/lai23c_interspeech.pdf,0,0,0,0,0,0
+2023,Boosting Punctuation Restoration with Data Generation and Reinforcement Learning,"Viet Lai, Abel Salinas, Hao Tan, Trung Bui, Quan Tran, Seunghyun Yoon, Hanieh Deilamsalehy, Franck Dernoncourt, Thien Nguyen",INTERSPEECH 2023,https://www.interspeech2023.org/,0,pdf,https://www.isca-speech.org/archive/pdfs/interspeech_2023/lai23c_interspeech.pdf,0,0,0,0,0,0
 2023,Automatic Creation of Named Entity Recognition Datasets by Querying Phrase Representations,"Hhynjae Kim, Jaehyo Yoo, Seunghyun Yoon, Jaewoo Kang",ACL 2023,https://2023.aclweb.org/,0,pdf,https://aclanthology.org/2023.acl-long.394.pdf,0,0,0,0,0,0
 2023,MEETINGQA: Extractive Question-Answering on Meeting Transcripts,"Archiki Prasad, Trung Bui, Seunghyun Yoon, Hanieh Deilamsalehy, Franck Dernoncourt, Mohit Bansal",ACL 2023,https://2023.aclweb.org/,0,pdf,https://aclanthology.org/2023.acl-long.837.pdf,0,0,0,0,0,0
 2023,PiC: A Phrase-in-Context Dataset for Phrase Understanding and Semantic Search,"Thang M. Pham, Seunghyun Yoon, Trung Bu, Anh Nguyeng",EACL 2023,https://2023.eacl.org/,0,pdf,https://aclanthology.org/2023.eacl-main.1.pdf,page,https://phrase-in-context.github.io/,0,0,0,0
